--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-server": "^19.2.8",
     "@angular/router": "^19.2.8",
     "@angular/ssr": "^19.2.9",
-    "express": "^4.18.2",
+    "@auth0/auth0-angular": "^2.2.3",
+    "express": "^4.21.2",
+    "express-openid-connect": "^2.18.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
