feat: update dependencies and refactor user module
- Added @angular-devkit/core and @ngrx/store dependencies to package.json.
- Refactored app-routing.module.ts to load user module instead of customers module.
- Updated app.module.ts to include StoreModule and AuthButtonComponent.
- Modified header.component.html to include AuthButtonComponent for authentication.
- Refactored login.component.html and login.component.ts to use reactive forms.
- Removed customers module and its related components, services, and routing.
- Created user module with user component and routing.
- Implemented AuthButtonComponent for login/logout functionality.
- Added user service for user management.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^19.2.12",
     "@angular/animations": "^19.2.8",
     "@angular/cdk": "^19.2.11",
     "@angular/common": "^19.2.8",
@@ -24,6 +25,7 @@
     "@angular/router": "^19.2.8",
     "@angular/ssr": "^19.2.9",
     "@auth0/auth0-angular": "^2.2.3",
+    "@ngrx/store": "^19.2.0",
     "express": "^4.21.2",
     "express-openid-connect": "^2.18.1",
     "rxjs": "~7.8.0",
