--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@angular/router": "^19.2.8",
     "@angular/ssr": "^19.2.9",
     "@auth0/auth0-angular": "^2.2.3",
+    "@ngrx/effects": "^19.2.0",
     "@ngrx/store": "^19.2.0",
     "express": "^4.21.2",
     "express-openid-connect": "^2.18.1",
+    "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.1.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
